@@ -26,10 +26,10 @@ const struct HashEntry WindowTableEntries[] = {
    { 0, 0, 0, 0, 0 },
    { "clearTimeout", Window::ClearTimeout, DontDelete|Function, 1, 0 },
    { "Option", Window::Option, DontDelete|ReadOnly, 0, 0 },
-   { "closed", Window::Closed, DontDelete|ReadOnly, 0, &WindowTableEntries[95] },
+   { "closed", Window::Closed, DontDelete|ReadOnly, 0, &WindowTableEntries[97] },
    { 0, 0, 0, 0, 0 },
-   { "event", Window::Event, DontDelete, 0, &WindowTableEntries[104] },
-   { "personalbar", Window::Personalbar, DontDelete|ReadOnly, 0, &WindowTableEntries[111] },
+   { "event", Window::Event, DontDelete, 0, &WindowTableEntries[107] },
+   { "personalbar", Window::Personalbar, DontDelete|ReadOnly, 0, &WindowTableEntries[115] },
    { "frames", Window::Frames, DontDelete|ReadOnly, 0, &WindowTableEntries[92] },
    { "screenY", Window::ScreenY, DontDelete|ReadOnly, 0, 0 },
    { "screen", Window::_Screen, DontDelete|ReadOnly, 0, 0 },
@@ -41,43 +41,43 @@ const struct HashEntry WindowTableEntries[] = {
    { "releaseEvents", Window::ReleaseEvents, DontDelete|Function, 0, 0 },
    { "print", Window::Print, DontDelete|Function, 2, 0 },
    { 0, 0, 0, 0, 0 },
-   { "opener", Window::Opener, DontDelete|ReadOnly, 0, &WindowTableEntries[108] },
+   { "opener", Window::Opener, DontDelete|ReadOnly, 0, &WindowTableEntries[112] },
    { "parent", Window::Parent, DontDelete|ReadOnly, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { "scrollX", Window::ScrollX, DontDelete|ReadOnly, 0, 0 },
    { "scrollY", Window::ScrollY, DontDelete|ReadOnly, 0, 0 },
-   { "scroll", Window::Scroll, DontDelete|Function, 2, &WindowTableEntries[107] },
-   { "removeEventListener", Window::RemoveEventListener, DontDelete|Function, 3, 0 },
+   { "scroll", Window::Scroll, DontDelete|Function, 2, &WindowTableEntries[111] },
+   { "menubar", Window::Menubar, DontDelete|ReadOnly, 0, &WindowTableEntries[109] },
    { "onkeypress", Window::Onkeypress, DontDelete, 0, 0 },
    { "onblur", Window::Onblur, DontDelete, 0, 0 },
    { "addEventListener", Window::AddEventListener, DontDelete|Function, 3, 0 },
-   { "Node", Window::Node, DontDelete, 0, &WindowTableEntries[100] },
+   { "Node", Window::Node, DontDelete, 0, &WindowTableEntries[102] },
    { "XMLSerializer", Window::XMLSerializer, DontDelete|ReadOnly, 0, 0 },
    { "scrollBy", Window::ScrollBy, DontDelete|Function, 2, 0 },
    { "Image", Window::Image, DontDelete|ReadOnly, 0, 0 },
    { "window", Window::_Window, DontDelete|ReadOnly, 0, 0 },
-   { "defaultStatus", Window::DefaultStatus, DontDelete, 0, &WindowTableEntries[96] },
+   { "defaultStatus", Window::DefaultStatus, DontDelete, 0, &WindowTableEntries[95] },
    { "pageXOffset", Window::PageXOffset, DontDelete|ReadOnly, 0, 0 },
-   { "pageYOffset", Window::PageYOffset, DontDelete|ReadOnly, 0, &WindowTableEntries[106] },
+   { "pageYOffset", Window::PageYOffset, DontDelete|ReadOnly, 0, &WindowTableEntries[110] },
    { "onmouseout", Window::Onmouseout, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { "scrollTo", Window::ScrollTo, DontDelete|Function, 2, 0 },
    { 0, 0, 0, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { "crypto", Window::Crypto, DontDelete|ReadOnly, 0, &WindowTableEntries[90] },
-   { "prompt", Window::Prompt, DontDelete|Function, 2, &WindowTableEntries[112] },
-   { "screenLeft", Window::ScreenLeft, DontDelete|ReadOnly, 0, &WindowTableEntries[110] },
+   { "prompt", Window::Prompt, DontDelete|Function, 2, &WindowTableEntries[116] },
+   { "screenLeft", Window::ScreenLeft, DontDelete|ReadOnly, 0, &WindowTableEntries[114] },
    { "status", Window::Status, DontDelete, 0, 0 },
    { "location", Window::_Location, DontDelete, 0, &WindowTableEntries[94] },
-   { "onmouseover", Window::Onmouseover, DontDelete, 0, &WindowTableEntries[115] },
+   { "onmouseover", Window::Onmouseover, DontDelete, 0, &WindowTableEntries[119] },
    { 0, 0, 0, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { "onselect", Window::Onselect, DontDelete, 0, 0 },
    { "XMLHttpRequest", Window::XMLHttpRequest, DontDelete|ReadOnly, 0, 0 },
    { "document", Window::Document, DontDelete|ReadOnly, 0, 0 },
    { "onunload", Window::Onunload, DontDelete, 0, 0 },
-   { "ondblclick", Window::Ondblclick, DontDelete, 0, &WindowTableEntries[109] },
+   { "ondblclick", Window::Ondblclick, DontDelete, 0, &WindowTableEntries[113] },
    { 0, 0, 0, 0, 0 },
    { "name", Window::Name, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
@@ -88,12 +88,12 @@ const struct HashEntry WindowTableEntries[] = {
    { 0, 0, 0, 0, 0 },
    { "Event", Window::EventCtor, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "history", Window::_History, DontDelete|ReadOnly, 0, &WindowTableEntries[98] },
+   { "history", Window::_History, DontDelete|ReadOnly, 0, &WindowTableEntries[100] },
    { "defaultstatus", Window::DefaultStatus, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "top", Window::Top, DontDelete|ReadOnly, 0, &WindowTableEntries[116] },
+   { "top", Window::Top, DontDelete|ReadOnly, 0, &WindowTableEntries[120] },
    { 0, 0, 0, 0, 0 },
-   { "navigator", Window::_Navigator, DontDelete|ReadOnly, 0, &WindowTableEntries[117] },
+   { "navigator", Window::_Navigator, DontDelete|ReadOnly, 0, &WindowTableEntries[122] },
    { 0, 0, 0, 0, 0 },
    { 0, 0, 0, 0, 0 },
    { "open", Window::Open, DontDelete|Function, 3, 0 },
@@ -106,28 +106,32 @@ const struct HashEntry WindowTableEntries[] = {
    { "outerWidth", Window::OuterWidth, DontDelete|ReadOnly, 0, 0 },
    { "ondragdrop", Window::Ondragdrop, DontDelete, 0, 0 },
    { 0, 0, 0, 0, 0 },
-   { "getSelection", Window::GetSelection, DontDelete|Function, 0, &WindowTableEntries[102] },
-   { "setTimeout", Window::SetTimeout, DontDelete|Function, 2, 0 },
-   { "moveBy", Window::MoveBy, DontDelete|Function, 2, &WindowTableEntries[99] },
+   { "getSelection", Window::GetSelection, DontDelete|Function, 0, &WindowTableEntries[105] },
+   { "statusbar", Window::Statusbar, DontDelete|ReadOnly, 0, &WindowTableEntries[103] },
+   { "locationbar", Window::Locationbar, DontDelete, 0, &WindowTableEntries[96] },
    { "DOMException", Window::DOMException, DontDelete, 0, &WindowTableEntries[91] },
    { 0, 0, 0, 0, 0 },
-   { "scrollbars", Window::Scrollbars, DontDelete|ReadOnly, 0, &WindowTableEntries[103] },
-   { "Range", Window::Range, DontDelete, 0, &WindowTableEntries[97] },
+   { "scrollbars", Window::Scrollbars, DontDelete|ReadOnly, 0, &WindowTableEntries[106] },
+   { "Range", Window::Range, DontDelete, 0, &WindowTableEntries[99] },
    { "clientInformation", Window::ClientInformation, DontDelete|ReadOnly, 0, 0 },
    { "konqueror", Window::_Konqueror, DontDelete|ReadOnly, 0, &WindowTableEntries[93] },
    { "screenX", Window::ScreenX, DontDelete|ReadOnly, 0, 0 },
    { "screenTop", Window::ScreenTop, DontDelete|ReadOnly, 0, 0 },
-   { "moveTo", Window::MoveTo, DontDelete|Function, 2, &WindowTableEntries[101] },
-   { "resizeBy", Window::ResizeBy, DontDelete|Function, 2, &WindowTableEntries[105] },
-   { "resizeTo", Window::ResizeTo, DontDelete|Function, 2, &WindowTableEntries[113] },
-   { "self", Window::Self, DontDelete|ReadOnly, 0, 0 },
+   { "toolbar", Window::Toolbar, DontDelete|ReadOnly, 0, &WindowTableEntries[98] },
+   { "moveBy", Window::MoveBy, DontDelete|Function, 2, &WindowTableEntries[101] },
+   { "moveTo", Window::MoveTo, DontDelete|Function, 2, &WindowTableEntries[104] },
+   { "resizeBy", Window::ResizeBy, DontDelete|Function, 2, &WindowTableEntries[108] },
+   { "resizeTo", Window::ResizeTo, DontDelete|Function, 2, &WindowTableEntries[117] },
+   { "self", Window::Self, DontDelete|ReadOnly, 0, &WindowTableEntries[121] },
    { "alert", Window::Alert, DontDelete|Function, 1, 0 },
-   { "confirm", Window::Confirm, DontDelete|Function, 1, &WindowTableEntries[114] },
+   { "confirm", Window::Confirm, DontDelete|Function, 1, &WindowTableEntries[118] },
+   { "setTimeout", Window::SetTimeout, DontDelete|Function, 2, 0 },
    { "focus", Window::Focus, DontDelete|Function, 0, 0 },
    { "close", Window::Close, DontDelete|Function, 0, 0 },
    { "setInterval", Window::SetInterval, DontDelete|Function, 2, 0 },
    { "clearInterval", Window::ClearInterval, DontDelete|Function, 1, 0 },
    { "captureEvents", Window::CaptureEvents, DontDelete|Function, 0, 0 },
+   { "removeEventListener", Window::RemoveEventListener, DontDelete|Function, 3, 0 },
    { "onabort", Window::Onabort, DontDelete, 0, 0 },
    { "onchange", Window::Onchange, DontDelete, 0, 0 },
    { "onclick", Window::Onclick, DontDelete, 0, 0 },
@@ -139,10 +143,11 @@ const struct HashEntry WindowTableEntries[] = {
    { "onmove", Window::Onmove, DontDelete, 0, 0 },
    { "onreset", Window::Onreset, DontDelete, 0, 0 },
    { "onresize", Window::Onresize, DontDelete, 0, 0 },
+   { "onscroll", Window::Onscroll, DontDelete, 0, 0 },
    { "onsubmit", Window::Onsubmit, DontDelete, 0, 0 }
 };
 
-const struct HashTable WindowTable = { 2, 118, WindowTableEntries, 90 };
+const struct HashTable WindowTable = { 2, 123, WindowTableEntries, 90 };
 
 } // namespace
 
@@ -168,6 +173,16 @@ const struct HashEntry LocationTableEntries[] = {
 };
 
 const struct HashTable LocationTable = { 2, 16, LocationTableEntries, 11 };
+
+} // namespace
+
+namespace KJS {
+
+const struct HashEntry BarInfoTableEntries[] = {
+   { "visible", BarInfo::Visible, DontDelete|ReadOnly, 0, 0 }
+};
+
+const struct HashTable BarInfoTable = { 2, 1, BarInfoTableEntries, 1 };
 
 } // namespace
 
